<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_background"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/home_txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/egypt"
        android:textColor="@android:color/white"
        android:textSize="64sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/eight"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/home_txt_title"
        android:layout_above="@id/home_group_buttons"
        android:layout_margin="@dimen/eight">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/egypt_overview"
                android:textColor="@android:color/white"
                android:textSize="26sp"
                android:textStyle="bold"/>

    </ScrollView>

    <LinearLayout
        android:id="@+id/home_group_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/home_btn_location"
            style="@style/home_buttons"
            android:drawableLeft="@drawable/location_marker"
            android:text="@string/visite"/>

        <Button
            android:id="@+id/home_btn_read_more"
            style="@style/home_buttons"
            android:drawableLeft="@drawable/read_more"
            android:text="@string/read_more"/>
    </LinearLayout>


</RelativeLayout>